# django-version-viewer

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: actions.yml
.github/workflows/: test.yml
django_version_viewer/: cms_toolbars.py  mixins.py  pip_viewer.py  tests.py  urls.py  utils.py  views.py
django_version_viewer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_version_viewer/templates/: test.html  toolbar.html  version_viewer.html
django_version_viewer/templatetags/: pip_version_viewer_tags.py
django_version_viewer/tests/: test_get_accessor_class.py  test_superuser_accessor.py  test_views.py
example18/: manage.py  requirements.txt
example18/example18/: settings.py  tests.py  urls.py  wsgi.py
example18/requirements/: pypi_requirements.txt
example18/templates/admin/: base.html  base_site.html  base_site_regular.html
example18/templates/admin/inc/: userlinks.html
example22/: manage.py  requirements.txt
example22/example22/: settings.py  urls.py  wsgi.py
example22/templates/admin/: custom_index.html
version_viewer/: urls.py  views.py
version_viewer/templates/: version_viewer.html
version_viewer/templatetags/: pip_version_viewer_tags.py
