[tool.poetry]
name = "django-version-viewer"
version = "2.1.9"
description = "Django app for viewing Python packages and their versions"
homepage = "https://github.com/ImaginaryLandscape/django-version-viewer"
readme = "README.md"
authors = ["Imagescape <info@imagescape.com>"]
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
]

include = [
    "LICENSE",
    "CHANGELOG.md",
]

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=4.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
coverage = "^7.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
